--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@casl/ability": "^5.3.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
